--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Random Quote Generator - Forismatic API</title>
+  <title>Ridhi bisht - Random Quote Generator - Forismatic API</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -41,6 +41,13 @@
     <h4>Built by Michael <a href="https://www.freecodecamp.org/m1chaelcodes" target="_blank"><i class="fa fa-free-code-camp"></i></a></h4>
   </div>
 </div>
+  <footer>
+	<p>
+		Created with <i class="fa fa-heart"></i> by
+		<a target="_blank" href="https://www.facebook.com/bisht.ridhi/">Ridhi Bisht</a>
+	
+	</p>
+</footer>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script  src="./script.js"></script>
 
